# tarea

./: Readme.md  app.py  pyproject.toml
.github/workflows/: ci.yml
